# QueryAssure

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  README.md  SECURITY.md  action.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_submission.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
benchmarks/: leaderboard.json  leaderboard.md
docs/: data-strategy.md  launch-plan.md
docs/releases/: v0.3.1.md
evals/: chaos.yml  retail.yml
metadata/: catalog.yml
public/: robots.txt  sitemap.xml
scripts/: github_summary.py
src/dataagentkit/: __init__.py  adapters.py  agent.py  api.py  benchmark.py  cli.py  datasets.py  generator.py  metadata.py  runner.py  validators.py
src/queryassure/: __init__.py  adapters.py  agent.py  api.py  benchmark.py  cli.py  data_quality.py  datasets.py  metadata.py  models.py  validators.py
tests/: rendered-html.test.mjs
tests_py/: test_core.py
