[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dataagentkit"
version = "0.1.0"
description = "Contract tests and CI quality gates for agentic analytics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Victoria Liu" }]
keywords = ["llm", "text-to-sql", "agent", "evaluation", "data", "sql"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "duckdb>=1.3.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "sqlglot>=27.0.0",
  "typer>=0.15.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
openai = ["openai>=1.60.0"]
dev = ["pytest>=8.3.0", "pytest-cov>=6.0.0", "ruff>=0.9.0"]

[project.scripts]
dak = "dataagentkit.cli:app"
dataagent-chat = "dataagentkit.api:run"

[tool.hatch.build.targets.wheel]
packages = ["src/dataagentkit"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/dataagentkit/cli.py" = ["B008"]
